--- a/styles.css
+++ b/styles.css
@@ -8,34 +8,46 @@ body {
     background-image: url('./data/background.svg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    margin-left: 2%;
+    margin-top: 2.5vh;
 }
 
+@media screen {
+    
+}
 
 /*** UNIQUE Rules ***/
 
-p {
-    position: absolute;
-    text-transform: lowercase;
-    font-size: 10vh;
-    line-height: 10vh;
-    top: 45%;
-    left:40%;
-}
-
 .links {
-    font-size: 2vh;
-    position:relative;
-}
-
-a {
-    text-transform: lowercase;
+    text-transform:capitalize;
+    font-weight: bold;
     text-decoration: none;
     color: black;
-    padding: 2%;
+    font-size: 3.5vh;
+    max-width: 100%;
+    margin-left: -.5%;
+    padding: .5%;
 }
 
-a:hover {
+.links:hover {
     background-color: #dedede;
     transition: .5s;
 }
 
+
+.title {
+    position: absolute;
+    text-transform: uppercase;
+    color: black;
+    text-decoration: none;
+    font-size: 3.5vh;
+    top: 5%;
+    left:2%;
+}
+
+.title:hover {
+    background-color: #dedede;
+    transition: .5s;
+}
