--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,9 @@
 
 body {
     font-family: "akidenz";
-    /*background: radial-gradient(#e66465, #9198e5);*/
-    background-image: url('./data/background.svg');
+    background: radial-gradient(circle, #f15f53, #ffffff);
+
+    /*background-image: url('./data/background.svg');*/
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -17,7 +18,7 @@ body {
 
 .responsive-spacing {
     display: block;
-    margin-bottom: 9vh;
+    margin-bottom: 8.5vh;
 }
 
 /*** UNIQUE Rules ***/
@@ -52,3 +53,69 @@ body {
     background-color: #dedede;
     transition: .5s;
 }
+
+
+
+/*** DROPDOWN Menu ***/
+
+.dropbtn {
+    text-decoration: none;
+    color: black;
+    font-size: 3.375vh;
+    margin-left: -.5%;
+    padding: .5%;
+    border: none;
+    background: none;
+  }
+
+  .dropbtn:hover {
+    background-color: #dedede;
+    transition: .5s;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    margin-right: 2%;
+
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+    transition: .5s;
+  }
+
+  /** ABOUT PAGE Rules **/
+
+  .about__text {
+    max-width: 80%;
+  }
+
+  @media (min-width: 600px) {
+    .about__text {
+        margin-bottom: 25%;
+        max-width: 50%;
+      }
+  }
