--- a/styles.css
+++ b/styles.css
@@ -105,22 +105,48 @@ body {
     transition: .5s;
   }
 
-  /** ABOUT PAGE Rules **/
+/** TEXT Rules **/
+.placeholder__text {
+   position: absolute;
+   text-transform: uppercase;
+   font-size: 2rem;
+   color: #888;
+}
 
-  .about__text {
-    max-width: 70%;
-    font-size: 3.5vh;
-  }
+/** ABOUT PAGE Rules **/
 
-  hr {
+.about__text {
+    max-width: 90%;
+    font-size: 3vh;
+}
+
+.about__links {
+    color: #888;
+    text-decoration: none;
+    padding: .5%;
+}
+.about__links:hover {
+    color: white;
+    background-color: blue;
+    transition: .5s;
+}
+
+hr {
     border: 2px dashed;
     max-width: 50%;
     margin-left: 0%;
 }  
 
-  @media (min-width: 600px) {
-    .about__text {
-        margin-bottom: 5rem;
-        max-width: 35%;
-      }
-  }
+@media (min-width: 600px) {
+.about__text {
+    margin-bottom: 2rem;
+    max-width: 35%;
+    }
+}
+
+/** RESEARCH Page Rules **/
+
+.research__images {
+    max-width: 25%;
+    margin-left: 50%;
+}
