--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,8 @@ body {
 }
 
 .links:hover {
-    background-color: #dedede;
+    background-color: blue;
+    color: white;
     transition: .5s;
 }
 
@@ -48,7 +49,8 @@ body {
 }
 
 .title:hover {
-    background-color: #dedede;
+    background-color: blue;
+    color: white;
     transition: .5s;
 }
 
@@ -107,7 +109,6 @@ body {
 
 /** TEXT Rules **/
 .placeholder__text {
-   position: absolute;
    text-transform: uppercase;
    font-size: 2rem;
    color: #888;
@@ -144,9 +145,71 @@ hr {
     }
 }
 
-/** RESEARCH Page Rules **/
+/** RESEARCH Mobile Page Rules **/
+
+
+.project {
+    display: flex;
+    margin-top: 5%;
+}
+
+.project__header {
+    font-size: 1rem;
+    font-weight: bolder;
+}
+
+.project__index {
+    font-size: 1rem;
+    max-width: 90%;
+}
+
+.project__text {
+    max-width: 50%;
+}
+
+.project__image {
+    max-width: 100%;
+}
 
 .research__images {
-    max-width: 25%;
-    margin-left: 50%;
+    max-width: 100%;
+    margin-left: 5%;
 }
+
+/** RESEARCH Desktop Page Rules **/
+
+@media (min-width: 600px) {
+
+    img {
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+    .project__image {
+        max-width: 40%;
+        object-fit: contain;
+    }
+    
+    .project__header {
+        font-size: 1.5rem;
+        text-decoration:underline;
+        font-weight: bold;
+        max-width: 30%;
+        margin-left: 5%;
+        margin-right: 10%;
+    }
+
+    .project__index {
+        font-size: 1rem;
+        max-width: 90%;
+        margin-top: 2%;
+    }
+    
+    
+    .project__text {
+        max-width: 25%;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+}
+    
