--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,9 @@
 
 body {
     font-family: "akidenz";
-    background: radial-gradient(circle, #f15f53, #ffffff);
-    /*background-image: url('./data/background.svg');*/
+    background-image: url('./data/background.svg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
     background-attachment: fixed;
     margin-left: 2%;
 }
@@ -147,15 +145,25 @@ hr {
 
 /** RESEARCH Mobile Page Rules **/
 
+img {
+    width: 100%;
+    height: 100%;
+}
 
 .project {
-    display: flex;
+    display:inline;
+    margin-top: 5%;
+}
+
+.project__indiv {
+    display:inline;
     margin-top: 5%;
 }
 
 .project__header {
-    font-size: 1rem;
-    font-weight: bolder;
+    max-width: 90%;
+    font-size: 1.5rem;
+    font-weight: bold;
 }
 
 .project__index {
@@ -164,25 +172,27 @@ hr {
 }
 
 .project__text {
-    max-width: 50%;
+    max-width: 90%;
 }
 
 .project__image {
-    max-width: 100%;
+    max-width: 80%;
 }
 
-.research__images {
-    max-width: 100%;
-    margin-left: 5%;
-}
 
 /** RESEARCH Desktop Page Rules **/
 
-@media (min-width: 600px) {
+@media (min-width: 850px) {
+    .project {
+        display: flex;
+        margin-top: 5%;
+    }
 
     img {
-        max-width: 100%;
-        max-height: 100%;
+        float: left;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
     }
 
     .project__image {
@@ -192,24 +202,26 @@ hr {
     
     .project__header {
         font-size: 1.5rem;
-        text-decoration:underline;
         font-weight: bold;
-        max-width: 30%;
+        max-width: 40%;
         margin-left: 5%;
         margin-right: 10%;
+        margin-top: -.25%;
+        margin-bottom: 1vw;
     }
 
     .project__index {
         font-size: 1rem;
         max-width: 90%;
-        margin-top: 2%;
+        margin-top: 0%;
     }
-    
-    
+
+
     .project__text {
-        max-width: 25%;
-        margin-left: 5%;
-        margin-right: 5%;
+        max-width: 40%;
+        margin-left: -50%;
+        margin-right: 10%;
+        margin-top: 10vw;
     }
 }
     
