--- a/styles.css
+++ b/styles.css
@@ -1,203 +1,211 @@
 @font-face {
-    font-family: "akidenz";
-    src: url("data/identity/Akzidenz-grotesk-light.ttf");
+  font-family: "akidenz";
+  src: url("data/identity/Akzidenz-grotesk-light.ttf");
 }
 
 body {
-    font-family: "akidenz";
-    background-image: url('./data/identity/background.svg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    margin-left: 2%;
+  font-family: "akidenz";
+  background-image: url("./data/identity/background.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  margin-left: 2%;
 }
 
 .responsive-spacing {
-    display: block;
-    margin-bottom: 8.5vh;
+  display: block;
+  margin-bottom: 8.5vh;
 }
 
 /*** UNIQUE Rules ***/
 
 .links {
-    text-transform:capitalize;
-    font-weight: bold;
-    text-decoration: none;
-    color: black;
-    font-size: 3vh;
-    margin-left: -.5%;
-    padding: .5%;
+  text-transform: capitalize;
+  font-weight: bold;
+  text-decoration: none;
+  color: black;
+  font-size: 3vh;
+  margin-left: -0.5%;
+  padding: 0.5%;
 }
 
 .links:hover {
-    background-color: blue;
-    color: white;
-    transition: .5s;
+  background-color: blue;
+  color: white;
+  transition: 0.5s;
 }
 
-
 .title {
-    position: absolute;
-    text-transform: uppercase;
-    color: black;
-    text-decoration: none;
-    font-size: 3vh;
-    top: 5%;
-    left:2%;
+  position: absolute;
+  text-transform: uppercase;
+  color: black;
+  text-decoration: none;
+  font-size: 3vh;
+  top: 5%;
+  left: 2%;
 }
 
 .title:hover {
-    background-color: blue;
-    color: white;
-    transition: .5s;
+  background-color: blue;
+  color: white;
+  transition: 0.5s;
 }
 
 .project__links {
-    color: black;
-    text-decoration: none;
-    padding: .25%;
+  color: black;
+  text-decoration: none;
+  padding: 0.25%;
 }
 
 .project__links:hover {
-    background-color: blue;
-    color: white;
-    transition: .5s;
+  background-color: blue;
+  color: white;
+  transition: 0.5s;
 }
 
 .title:hover {
-    background-color: blue;
-    color: white;
+  background-color: blue;
+  color: white;
 }
-
 
 /** TEXT Rules **/
 .placeholder__text {
-   text-transform: uppercase;
-   font-size: 2rem;
-   color: #888;
+  text-transform: uppercase;
+  font-size: 2rem;
+  color: #888;
 }
 
 /** ABOUT PAGE Rules **/
 
 .about__text {
-    max-width: 90%;
-    font-size: 2.5vh;
+  max-width: 90%;
+  font-size: 2.5vh;
 }
 
 .about__links {
-    color: #888;
-    text-decoration: none;
-    padding: .5%;
+  color: #888;
+  text-decoration: none;
+  padding: 0.5%;
 }
 .about__links:hover {
-    color: white;
-    background-color: blue;
-    transition: .5s;
+  color: white;
+  background-color: blue;
+  transition: 0.5s;
 }
 
 hr {
-    border: 2px dashed;
-    max-width: 50%;
-    margin-left: 0%;
-}  
-
-@media (min-width: 600px) {
-.about__text {
-    margin-bottom: 2rem;
-    max-width: 50%;
-    }
+  border: 2px dashed;
+  max-width: 50%;
+  margin-left: 0%;
 }
 
-/** RESEARCH Mobile Page Rules **/
+@media (min-width: 600px) {
+  .about__text {
+    margin-bottom: 2rem;
+    max-width: 50%;
+  }
+}
+
+/** CONTENT Mobile Page Rules **/
+
+.content__links {
+    color: #888;
+    text-decoration: underline;
+    padding: 0.5%;
+  }
+
+.content__links:hover {
+    color: white;
+    background-color: blue;
+    transition: 0.5s;
+  }
+
 
 img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .project {
-    display:inline;
-    margin-top: 5%;
+  display: inline;
+  margin-top: 5%;
 }
 
 .project__indiv {
-    display:inline;
-    margin-top: 5%;
+  display: inline;
+  margin-top: 5%;
 }
 
 .project__header {
-    max-width: 90%;
-    font-size: 1.5rem;
-    font-weight: bold;
+  max-width: 90%;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 .project__index {
-    font-size: 1rem;
-    max-width: 90%;
+  font-size: 1rem;
+  max-width: 90%;
 }
 
 .project__text {
-    max-width: 90%;
+  max-width: 90%;
 }
 
 .project__image {
-    max-width: 100%;
-    filter: drop-shadow(.25rem .25rem 0.5rem #666);
+  max-width: 100%;
+  filter: drop-shadow(0.25rem 0.25rem 0.5rem #666);
 }
 
-
-/** RESEARCH Desktop Page Rules **/
+/** CONTENT Desktop Page Rules **/
 
 @media (min-width: 850px) {
-    .project {
-        display: flex;
-        margin-top: 5%;
-    }
+  .project {
+    display: flex;
+    margin-top: 5%;
+  }
 
-    img {
-        float: left;
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-    }
+  img {
+    float: left;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
 
-    .project__image {
-        max-width: 40%;
-        object-fit: contain;
-        filter: drop-shadow(.25rem .25rem 0.5rem #666);
-        transition: transform 0.4s ease;
-        transform-origin: 50% 50%;
-        overflow:hidden;
-    }
+  .project__image {
+    max-width: 40%;
+    object-fit: contain;
+    filter: drop-shadow(0.25rem 0.25rem 0.5rem #666);
+    transition: transform 0.4s ease;
+    transform-origin: 50% 50%;
+    overflow: hidden;
+  }
 
-    .project__image:hover {
-        transform: scale(1.01);
-        opacity:90%;
-        width: 100%;
-    }
-    
-    .project__header {
-        font-size: 1.5rem;
-        font-weight: bold;
-        width: 40%;
-        margin-left: 5%;
-        margin-right: 10%;
-        margin-top: -.25%;
-        margin-bottom: 1vw;
-    }
+  .project__image:hover {
+    transform: scale(1.01);
+    opacity: 90%;
+    width: 100%;
+  }
 
-    .project__index {
-        font-size: 1rem;
-        max-width: 90%;
-        margin-top: 0%;
-    }
+  .project__header {
+    font-size: 1.5rem;
+    font-weight: bold;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 10%;
+    margin-top: -0.25%;
+    margin-bottom: 1vw;
+  }
 
-    
-    .project__text {
-        max-width: 40%;
-        margin-left: -50%;
-        margin-right: 10%;
-        margin-top: 12vmin;
-    }
+  .project__index {
+    font-size: 1rem;
+    max-width: 90%;
+    margin-top: 0%;
+  }
+
+  .project__text {
+    max-width: 40%;
+    margin-left: -50%;
+    margin-right: 10%;
+    margin-top: 12vmin;
+  }
 }
-    
