--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,8 @@ body {
   color: black;
   text-decoration: none;
   padding: 0.25%;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
 }
 
 .project__links:hover {
@@ -80,6 +82,8 @@ body {
 .about__text {
   max-width: 90%;
   font-size: 2.5vh;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
 }
 
 .about__links {
@@ -208,3 +212,15 @@ img {
     margin-top: 12vmin;
   }
 }
+
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
+  
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+  }
