--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,200;0,300;1,100&family=Space+Grotesk:wght@300&display=swap');
+
 @font-face {
   font-family: "akidenz";
   src: url("data/identity/Akzidenz-grotesk-light.ttf");
@@ -5,6 +7,7 @@
 
 body {
   font-family: "akidenz";
+  background-image: linear-gradient(blue, white);
   background-image: url("./data/identity/background.svg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -143,6 +146,8 @@ img {
   max-width: 90%;
   font-size: 1.5rem;
   font-weight: bold;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
 }
 
 .project__index {
@@ -197,6 +202,8 @@ img {
     margin-right: 10%;
     margin-top: -0.25%;
     margin-bottom: 1vw;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s;
   }
 
   .project__index {
