--- a/styles.css
+++ b/styles.css
@@ -6,19 +6,26 @@
 }
 
 body {
-  font-family: "akidenz";
-  background-color: #777;
-  /* background-image: url("./data/identity/background.svg");
+  /* font-family: "akidenz"; */
+  /* font-family: 'Hanken Grotesk', sans-serif; */
+  font-family: 'Space Grotesk', sans-serif;
+  /* background: greenyellow;  */
+  /* background-image: url("./data/spatial/hrgrenderings.gif"); */
+  /* background-image: url("./data/research/01\ Precolonial.jpg"); */
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed; */
+  background-attachment: fixed;
   margin-left: 2%;
-  color:white;
+  color:#222;
 }
+
+/* .intro__body {
+  background: greenyellow;
+} */
 
 .responsive-spacing {
   display: block;
-  margin-bottom: 8.5vh;
+  margin-bottom: 5.5rem;
 }
 
 /*** UNIQUE Rules ***/
@@ -27,15 +34,23 @@ body {
   text-transform: capitalize;
   font-weight: bold;
   text-decoration: none;
-  color: white;
+  color: #222;
   -webkit-animation: fadeIn 1s;
   animation: fadeIn 1s;
   /* color: black; */
-  font-size: 3vh;
-  margin-left: -0.5%;
+  font-size: 1.5rem;
+  margin-left: 0.5%;
   padding: 0.5%;
 }
 
+#scatter__intro {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: 0;
+}
 /* .links:hover {
   background-color: blue;
   color: white;
@@ -46,13 +61,13 @@ body {
   position: absolute;
   text-transform: uppercase;
   color: greenyellow;
-  /* color: black; */
+  color: black;
   text-decoration: none;
-  font-size: 3vh;
+  font-size: 2rem;
   -webkit-animation: fadeIn 1s;
   animation: fadeIn 1s;
   top: 5%;
-  left: 2%;
+  left: 3%;
 }
 
 /* .title:hover {
@@ -67,12 +82,13 @@ body {
 }
 
 .project__links {
-  color: white;
+  color: #222;
+  /* color: #fff; */
   text-decoration: none;
   padding: 0.25%;
   -webkit-animation: fadeIn 1s;
   animation: fadeIn 1s;
-  font-size: 2.75vh;
+  font-size: 1.5rem;
 }
 
 /* .project__links:hover {
@@ -95,9 +111,14 @@ body {
 
 /** ABOUT PAGE Rules **/
 
+/* .about__body {
+  background: greenyellow;
+} */
+
 .about__text {
-  max-width: 90%;
-  font-size: 2.5vh;
+  max-width: 40%;
+  font-size: 1.25rem;
+  margin-left: 1%;
   -webkit-animation: fadeIn 1s;
   animation: fadeIn 1s;
 }
@@ -114,19 +135,17 @@ hr {
   margin-left: 0%;
 }
 
-@media (min-width: 600px) {
-  .about__text {
-    margin-bottom: 2rem;
-    max-width: 50%;
-  }
+.about__text {
+  margin-bottom: 2rem;
+  max-width: 80%;
 }
 
-/** CONTENT Mobile Page Rules **/
+/** CONTENT ` Page Rules **/
 
 .content__links {
   color: blue;
   /* text-decoration: underline; */
-  padding: 0.5%;
+  padding: 0%;
 }
 
 /* .content__links:hover {
@@ -159,17 +178,19 @@ img {
 }
 
 .project__index {
+  margin-left: 1%;
   font-size: 1rem;
   max-width: 90%;
 }
 
 .project__text {
-  max-width: 90%;
+  font-size: 1.25rem;
+  max-width: 95%;
 }
 
 .project__image {
   max-width: 100%;
-  filter: drop-shadow(0.25rem 0.25rem 0.5rem #666);
+  /* filter: drop-shadow(0.25rem 0.25rem 0.5rem #666); */
 }
 
 /** CONTENT Desktop Page Rules **/
@@ -190,10 +211,22 @@ img {
   .project__image {
     max-width: 40%;
     object-fit: contain;
-    filter: drop-shadow(0.25rem 0.25rem 0.5rem #666);
+    /* filter: drop-shadow(0.25rem 0.25rem 0.5rem #666); */
     transition: transform 0.4s ease;
     transform-origin: 50% 50%;
     overflow: hidden;
+    display: flex;
+  }
+
+  .supporting__image {
+    max-width: 40%;
+    margin-left: 7.5%;
+    object-fit: contain;
+    /* filter: drop-shadow(0.25rem 0.25rem 0.5rem #666); */
+    transition: transform 0.4s ease;
+    transform-origin: 50% 50%;
+    overflow: hidden;
+    display: flex;
   }
 
   .content__links:hover {
